// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить цену c кредтиным предложением 1`] = `
<div
  className="ListingAmpItemPriceInfo"
>
  <div
    className="ListingAmpItemPriceInfo__row"
  >
    <div
      className="ListingAmpItemPriceInfo__price"
    >
      855 000 ₽
    </div>
  </div>
  <div
    className="ListingAmpItemPriceInfo__row"
  >
    <a
      className="AmpLink AmpCreditPrice ListingAmpItemPriceInfo__credit"
      href="link/card/?category=cars&section=used&mark=FORD&model=ECOSPORT&sale_id=1085562758&sale_hash=1970f439#credit-card"
    >
      от 
      29 300 ₽
       
      /
       
      мес.
    </a>
  </div>
</div>
`;

exports[`должен отрендерить цену в долларах для обычного объвления 1`] = `
<div
  className="ListingAmpItemPriceInfo"
>
  <div
    className="ListingAmpItemPriceInfo__row"
  >
    <div
      className="ListingAmpItemPriceInfo__price"
    >
      1 000 $
    </div>
  </div>
</div>
`;

exports[`должен отрендерить цену в рублях для обычного объвления 1`] = `
<div
  className="ListingAmpItemPriceInfo"
>
  <div
    className="ListingAmpItemPriceInfo__row"
  >
    <div
      className="ListingAmpItemPriceInfo__price"
    >
      100 000 ₽
    </div>
  </div>
</div>
`;

exports[`не должен отрендериться для проданной тачки 1`] = `null`;
